<resources>
    <string name="app_name">PRM 1</string>
    <string name="product_list_label">Product List</string>
    <string name="product_label">Product</string>
    <string name="add_product">Add product</string>
    <string name="filter_label">Filter</string>
    <string name="name_label">Name</string>
    <string name="category_label">Category</string>
    <string name="disposed_label">Disposed</string>
    <string name="expiration_date_label">Expires at</string>
    <string name="quantity_label">Quantity</string>
    <string-array name="categories">
        <item>Medicaments</item>
        <item>Cosmetics</item>
        <item>Foods</item>
    </string-array>
    <string-array name="categories_filter">
        <item>All</item>
        <item>Medicaments</item>
        <item>Cosmetics</item>
        <item>Foods</item>
    </string-array>
    <string-array name="expired_filter">
        <item>All</item>
        <item>Expired</item>
        <item>Not expired</item>
    </string-array>
    <string name="save_label">Save</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="form_has_errors">Form has errors!</string>
    <string name="list_size">Number of elements: </string>
    <string name="expired_product">Product has expired</string>
    <string name="remove_dialog_title">Remove?</string>
    <string name="remove_dialog_body">Do you want to remove this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>