<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:fitsSystemWindows="true" tools:context=".fragments.UpsertProductFragment" android:id="@+id/upsertLayout">
  <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
      <ImageView android:layout_width="match_parent" android:layout_height="200dp" android:id="@+id/product_image_view"
      android:scaleType="fitCenter" tools:srcCompat="@drawable/img" app:srcCompat="@drawable/img"/>
      <EditText android:layout_width="match_parent" android:layout_height="48dp" android:inputType="text" android:ems="10" android:id="@+id/nameField" android:hint="@string/name_label"/>
      <TextView android:text="@string/category_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/categoryLabel"/>
      <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/categorySpinner" android:entries="@array/categories" android:minHeight="48dp"/>
      <TextView android:text="@string/expiration_date_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/expirationLabel"/>
      <CalendarView android:layout_width="match_parent" android:layout_height="307dp" android:id="@+id/expirationCalendar"/>
      <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" android:ems="10" android:id="@+id/quantityField" android:hint="@string/quantity_label" android:minHeight="48dp"/>
      <Switch android:text="@string/disposed_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/disposedField" android:minHeight="48dp"/>
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>